Update CSS and SCSS files: Adjust font sizes in home view for better readability and fix missing newline in minified CSS file.

--- a/assets/scss/views/_home.scss
+++ b/assets/scss/views/_home.scss
@@ -4189,11 +4189,11 @@ li {
     .theme-list{
         padding-top: 18px;
         li{
-            font-size: 24px;
+            font-size: 20px;
             &:before{
                 width: 10px;
                 height: 10px;
-                top: 15px;
+                top: 11px;
             }
         }
     }
